# spotify-hs

./: .gitignore  ChangeLog.md  README.md  package.yaml  spotify-hs.cabal
Example/: AudioFeatures.hs
app/: Main.hs
src/: ConvertTypes.hs  Secret.hs  Spotify.hs  Types.hs
