name:           spotify-hs
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/danisales/spotify-hs#readme>
homepage:       https://github.com/danisales/spotify-hs#readme
bug-reports:    https://github.com/danisales/spotify-hs/issues
author:         Danielle Sales
maintainer:     daniellesales22@gmail.com
copyright:      2018 Danielle Sales
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/danisales/spotify-hs

library
  exposed-modules:
      Spotify, Types, Secret, ConvertTypes
  other-modules:
      Paths_spotify_hs
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5, wreq, lens, aeson, lens-aeson,base64-bytestring, bytestring, containers
  default-language: Haskell2010
  default-extensions:  OverloadedStrings

executable spotify-hs-exe
  main-is: Main.hs
  other-modules:
      Paths_spotify_hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , spotify-hs
  default-language: Haskell2010

test-suite spotify-hs-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_spotify_hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , spotify-hs
  default-language: Haskell2010
